--- a/CATopalian_JavaScript_True_AI_Creation.html
+++ b/CATopalian_JavaScript_True_AI_Creation.html
@@ -1,5 +1,5 @@
 <!-- Dedicated to God the Father -->
-<!-- All Rights Reserved Christopher Andrew Topalian Copyright 2000-2025 -->
+<!-- All Rights Reserved Christopher Andrew Topalian Copyright 2000-2026 -->
 <!-- https://github.com/ChristopherTopalian -->
 <!-- https://github.com/ChristopherAndrewTopalian -->
 <!-- CATopalian_JavaScript_True_AI_Creation.html -->
@@ -7,6 +7,10 @@
 <html>
 <head>
 <title> CATopalian JavaScript True AI Creation </title>
+
+<meta charset = 'UTF-8'>
+
+<meta name = 'viewport' content = 'width = device-width, initial-scale = 1.0'>
 
 <link rel = 'stylesheet' href = 'src/css/style001.css'>
 
@@ -21,6 +25,8 @@
 <script src = 'src/js/logicGates/logicGates.js'></script>
 
 <script src = 'src/js/think/think.js'></script>
+
+<script src = 'src/js/think/hunger/hungerStatus.js'></script>
 
 <script src = 'src/js/update/updateGates.js'></script>
 
